--- a/microservice-products.properties
+++ b/microservice-products.properties
@@ -1,4 +1,6 @@
 server.port=8083
+spring.application.name=Api_sbHystrix 
+
 
 # Base de données H2 pour stocker les données utilisateur
 spring.datasource.url=jdbc:h2:file:./data/microservice
@@ -29,7 +31,7 @@ resilience4j.retry.instances.productService.max-attempts=3
 resilience4j.retry.instances.productService.wait-duration=2s
 
 #Actuator
-management.endpoints.web.exposure.include=refresh,env,health,customEndpoint
+management.endpoints.web.exposure.include=refresh,env,health,customEndpoint,hystrix.stream
 management.endpoint.env.access=unrestricted
 management.endpoint.env.show-values=always
 management.endpoint.env.post.enabled=true
