--- a/microservice-products.properties
+++ b/microservice-products.properties
@@ -31,7 +31,7 @@ resilience4j.retry.instances.productService.max-attempts=3
 resilience4j.retry.instances.productService.wait-duration=2s
 
 #Actuator
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=refresh,env,health,customEndpoint,hystrix.stream 
 management.endpoint.env.access=unrestricted
 management.endpoint.env.show-values=always
 management.endpoint.env.post.enabled=true
